converted environment options to lfm  from Darius
 SVN 7726@trunk

--- a/ide/lazdocfrm.lfm
+++ b/ide/lazdocfrm.lfm
@@ -15,6 +15,7 @@ object LazDocForm: TLazDocForm
   object PageControl: TPageControl
     ActivePage = ShortTabSheet
     Align = alClient
+    BorderSpacing.OnChange = nil
     TabIndex = 0
     TabOrder = 0
     TabPosition = tpBottom
@@ -28,8 +29,7 @@ object LazDocForm: TLazDocForm
       Width = 745
       object ShortEdit: TEdit
         Align = alTop
-        BorderSpacing.OnChange = nil
-        OnChange = DescrMemoChange
+        OnChange = DocumentationTagChange
         TabOrder = 0
         Text = 'ShortEdit'
         Height = 23
@@ -44,6 +44,7 @@ object LazDocForm: TLazDocForm
       Width = 745
       object DescrMemo: TMemo
         Align = alClient
+        BorderSpacing.OnChange = nil
         Font.CharSet = ANSI_CHARSET
         Font.Color = clBlack
         Font.Height = -12
@@ -52,7 +53,7 @@ object LazDocForm: TLazDocForm
         Lines.Strings = (
           'DescrMemo'
         )
-        OnChange = DescrMemoChange
+        OnChange = DocumentationTagChange
         TabOrder = 0
         Height = 91
         Width = 745
@@ -66,7 +67,6 @@ object LazDocForm: TLazDocForm
       Width = 745
       object ErrorsMemo: TMemo
         Align = alClient
-        BorderSpacing.OnChange = nil
         Font.CharSet = ANSI_CHARSET
         Font.Color = clBlack
         Font.Height = -12
@@ -75,7 +75,7 @@ object LazDocForm: TLazDocForm
         Lines.Strings = (
           'ErrorsMemo'
         )
-        OnChange = DescrMemoChange
+        OnChange = DocumentationTagChange
         TabOrder = 0
         Height = 91
         Width = 745
